--- a/1_TransferLearningArroces.ipynb
+++ b/1_TransferLearningArroces.ipynb
@@ -6,12 +6,7 @@
         "id": "PaAb-p46Sib-"
       },
       "source": [
-        "# **Momento de Retroalimentación: Módulo 2 Implementación de un modelo de deep learning. (Portafolio Implementación)**\n",
-        "\n",
-        "Zaide Islas Montiel A01751580\n",
-        "\n",
-        "13/nov/23\n",
-        "\n"
+        "# **Aplicación de Transfer Learning para clasificar especies de arroces**\n",
       ]
     },
     {
